Update Network cards order and translations
Update Network cards order and translations

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -10,9 +10,10 @@
         "Activer": "Aktivieren",
         "Visible": "Sichtbar",
         "Carte Réseau": "Netzwerk-Karte",
-        "1er port Ethernet (par défaut)": "1. Ethernet Port (standardmäßig)",
+        "1er port Ethernet": "1. Ethernet Port",
         "1er port Wi-Fi": "1. Wi-Fi Port",
         "Autre": "Andere",
+        "Auto (par défaut)": "Auto (standardmäßig)",
         "Nom de la carte réseau": "Netzwerk-Karten Name",
         "saisir le nom de la carte": "Geben Sie den Namen der Karte ein",
         "Equipement local ou déporté ?": "Lokale oder Remote Geräte?",
