--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -10,9 +10,10 @@
         "Activer": "Enable",
         "Visible": "Visible",
         "Carte Réseau": "Network card",
-        "1er port Ethernet (par défaut)": "1st ethernet port (default)",
+        "1er port Ethernet": "1st ethernet port",
         "1er port Wi-Fi": "1st WiFi port",
         "Autre": "Other",
+        "Auto (par défaut)": "Auto (default)",
         "Nom de la carte réseau": "Network card name",
         "saisir le nom de la carte": "Enter card name",
         "Equipement local ou déporté ?": "Local or remote equipment?",
