--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -10,9 +10,10 @@
         "Activer": "Activar",
         "Visible": "Visible",
         "Carte Réseau": "Tarjeta de red",
-        "1er port Ethernet (par défaut)": "1er puerto de red (por defecto)",
+        "1er port Ethernet": "1er puerto de red",
         "1er port Wi-Fi": "1er puerto WI-FI",
         "Autre": "Otros",
+        "Auto (par défaut)": "Auto (por defecto)",
         "Nom de la carte réseau": "Nombre del adaptador de red",
         "saisir le nom de la carte": "Introduzca el nombre de la tarjeta",
         "Equipement local ou déporté ?": "¿Dispositivo local o remoto?",
