--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -10,9 +10,10 @@
         "Activer": "Activer",
         "Visible": "Visible",
         "Carte Réseau": "Carte Réseau",
-        "1er port Ethernet (par défaut)": "1er port Ethernet (par défaut)",
+        "1er port Ethernet": "1er port Ethernet",
         "1er port Wi-Fi": "1er port Wi-Fi",
         "Autre": "Autre",
+        "Auto (par défaut)": "Auto (par défaut)",
         "Nom de la carte réseau": "Nom de la carte réseau",
         "saisir le nom de la carte": "saisir le nom de la carte",
         "Equipement local ou déporté ?": "Equipement local ou déporté ?",
