--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -40,6 +40,7 @@
         "Mes Monitorings": "Meine Monitorings",
         "Local ou déporté ?": "Lokale oder Remote ?",
         "Volume 2": "Volume 2",
+        "Volume USB": "Volume USB",
         "Ajouter Monitoring": "Ajouter Monitoring",
         "Gestion": "Gestion",
         "Ajouter": "Ajouter",
