--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -40,6 +40,7 @@
         "Mes Monitorings": "My Monitorings",
         "Local ou déporté ?": "Local or remote ?",
         "Volume 2": "Volume 2",
+        "Volume USB": "Volume USB",
         "Ajouter Monitoring": "Add a Monitoring",
         "Gestion": "Management",
         "Ajouter": "Add",
