--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -40,6 +40,7 @@
         "Mes Monitorings": "Mis Monitoring",
         "Local ou déporté ?": "¿Local o remoto?",
         "Volume 2": "Volumen 2",
+        "Volume USB": "Volumen USB",
         "Ajouter Monitoring": "Añadir Monitorización",
         "Gestion": "Gestión",
         "Ajouter": "Añadir",
