--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -40,6 +40,7 @@
         "Mes Monitorings": "Mes Monitorings",
         "Local ou déporté ?": "Local ou déporté ?",
         "Volume 2": "Volume 2",
+        "Volume USB": "Volume USB",
         "Ajouter Monitoring": "Ajouter Monitoring",
         "Gestion": "Gestion",
         "Ajouter": "Ajouter",
