Update Configuration Panel

--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -54,6 +54,7 @@
         "à cocher seulement si vous avez un 2ème volume (Volume 2)": "à cocher seulement si vous avez un 2ème volume (Volume 2)",
         "à cocher seulement si vous avez un volume USB dans Synology": "à cocher seulement si vous avez un volume USB dans Synology",
         "à cocher pour spécifier la commande de récupération de la température": "à cocher pour spécifier la commande de récupération de la température",
+        "Température (Alt)": "Température (Alt)",
         "Commande Temp": "Commande Temp",
         "Modèle (Alt)": "Modèle (Alt)",
         "à cocher si le nom du modèle de votre Syno est mal détecté": "à cocher si le nom du modèle de votre Syno est mal détecté"
