Update Configuration Panel

--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -50,11 +50,11 @@
         "Commandes": "Commandes",
         "Type": "Type",
         "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...",
-        "à cocher seulement si vous désirez monitorer un NAS Synology": "à cocher seulement si vous désirez monitorer un NAS Synology",
-        "à cocher seulement si vous avez un 2ème volume (Volume 2)": "à cocher seulement si vous avez un 2ème volume (Volume 2)",
-        "à cocher seulement si vous avez un volume USB dans Synology": "à cocher seulement si vous avez un volume USB dans Synology",
+        "à cocher si vous désirez monitorer un NAS Synology": "à cocher seulement si vous désirez monitorer un NAS Synology",
+        "à cocher si vous avez un 2ème volume (Volume 2)": "à cocher seulement si vous avez un 2ème volume (Volume 2)",
+        "à cocher si vous avez un volume USB dans Synology": "à cocher seulement si vous avez un volume USB dans Synology",
         "à cocher pour spécifier la commande de récupération de la température": "à cocher pour spécifier la commande de récupération de la température",
-        "Température (Alt)": "Température (Alt)",
+        "Temp (Alt)": "Temp (Alt)",
         "Commande Temp": "Commande Temp",
         "Modèle (Alt)": "Modèle (Alt)",
         "à cocher si le nom du modèle de votre Syno est mal détecté": "à cocher si le nom du modèle de votre Syno est mal détecté"
