--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -15,18 +15,18 @@
         "Autre": "Other",
         "Auto (par défaut)": "Auto (default)",
         "Nom de la carte réseau": "Network card name",
-        "saisir le nom de la carte": "Enter card name",
-        "Equipement local ou déporté ?": "Local or remote equipment?",
+        "Saisir le nom de la carte": "Enter card name",
+        "Equipement local ou distant ?": "Local or remote equipment?",
         "Local": "Local",
-        "Déporté": "Remote",
+        "Distant": "Remote",
         "Adresse IP": "IP Address",
-        "saisir l'adresse IP": "Enter the IP address",
+        "Saisir l'adresse IP": "Enter the IP address",
         "Port SSH": "SSH Port",
-        "saisir le port SSH": "Enter SSH port number",
+        "Saisir le port SSH": "Enter SSH port number",
         "Identifiant": "Login id",
-        "saisir le login": "Enter login",
+        "Saisir le login": "Enter login",
         "Mot de passe": "Password",
-        "saisir le password": "Enter password",
+        "Saisir le password": "Enter password",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
@@ -38,9 +38,9 @@
         "Sauvegarder": "Save",
         "Ajouter un Monitoring": "Add a Monitoring",
         "Mes Monitorings": "My Monitorings",
-        "Local ou déporté ?": "Local or remote ?",
+        "Local ou Distant ?": "Local or Remote ?",
         "Volume 2": "Volume 2",
-        "Volume USB": "Volume USB",
+        "HDD USB": "HDD USB",
         "Ajouter Monitoring": "Add a Monitoring",
         "Gestion": "Management",
         "Ajouter": "Add",
@@ -50,8 +50,14 @@
         "Commandes": "Commands",
         "Type": "Type",
         "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1: 2nd Ethernet port, wlan1: 2nd Wi-Fi port ...",
-        "à cocher seulement si vous désirez monitorer un NAS Synology": "check only if you want to monitor a Synology NAS",
-        "à cocher seulement si vous avez un 2ème volume (Volume 2) dans Synology. Le volume 1 est pris en compte par défaut": "check only if you have a 2nd volume (Volume 2) in Synology. Volume 1 is taken into account by default"
+        "Modèle (Alt)": "Modèle (Alt)",
+        "Temp (Alt)": "Temp (Alt)",
+        "Commande Temp": "Commande Temp",
+        "A cocher pour monitorer un NAS Synology": "Check to monitor a Synology NAS",
+        "A cocher si le nom du modèle de votre Syno est mal détecté": "Check if Syno model name is poorly detected",
+        "A cocher si vous avez un 2ème volume disque": "Check if you have a 2nd disk volume",
+        "A cocher si vous avez un disque USB": "Check if you have a USB disk",
+        "A cocher pour spécifier la commande de récupération de la température": "Check to specify custom command to retrieve temp"
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribution",
