--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -15,18 +15,18 @@
         "Autre": "Autre",
         "Auto (par défaut)": "Auto (par défaut)",
         "Nom de la carte réseau": "Nom de la carte réseau",
-        "saisir le nom de la carte": "saisir le nom de la carte",
-        "Equipement local ou déporté ?": "Equipement local ou déporté ?",
+        "Saisir le nom de la carte": "Saisir le nom de la carte",
+        "Equipement local ou distant ?": "Equipement local ou distant ?",
         "Local": "Local",
-        "Déporté": "Déporté",
+        "Distant": "Distant",
         "Adresse IP": "Adresse IP",
-        "saisir l'adresse IP": "saisir l'adresse IP",
+        "Saisir l'adresse IP": "Saisir l'adresse IP",
         "Port SSH": "Port SSH",
-        "saisir le port SSH": "saisir le port SSH",
+        "Saisir le port SSH": "Saisir le port SSH",
         "Identifiant": "Identifiant",
-        "saisir le login": "saisir le login",
+        "Saisir le login": "Saisir le login",
         "Mot de passe": "Mot de passe",
-        "saisir le password": "saisir le password",
+        "Saisir le password": "Saisir le password",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
@@ -38,9 +38,9 @@
         "Sauvegarder": "Sauvegarder",
         "Ajouter un Monitoring": "Ajouter un Monitoring",
         "Mes Monitorings": "Mes Monitorings",
-        "Local ou déporté ?": "Local ou déporté ?",
-        "Volume 2": "Volume 2",
-        "Volume USB": "Volume USB",
+        "Local ou Distant ?": "Local ou Distant ?",
+        "Volume 2": "HDD 2",
+        "HDD USB": "Volume USB",
         "Ajouter Monitoring": "Ajouter Monitoring",
         "Gestion": "Gestion",
         "Ajouter": "Ajouter",
@@ -50,14 +50,14 @@
         "Commandes": "Commandes",
         "Type": "Type",
         "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...",
-        "à cocher si vous désirez monitorer un NAS Synology": "à cocher si vous désirez monitorer un NAS Synology",
-        "à cocher si vous avez un 2ème volume (Volume 2)": "à cocher si vous avez un 2ème volume (Volume 2)",
-        "à cocher si vous avez un volume USB": "à cocher si vous avez un volume USB",
-        "à cocher pour spécifier la commande de récupération de la température": "à cocher pour spécifier la commande de récupération de la température",
+        "Modèle (Alt)": "Modèle (Alt)",
         "Temp (Alt)": "Temp (Alt)",
         "Commande Temp": "Commande Temp",
-        "Modèle (Alt)": "Modèle (Alt)",
-        "à cocher si le nom du modèle de votre Syno est mal détecté": "à cocher si le nom du modèle de votre Syno est mal détecté"
+        "A cocher pour monitorer un NAS Synology": "A cocher pour monitorer un NAS Synology",
+        "A cocher si le nom du modèle de votre Syno est mal détecté": "A cocher si le nom du modèle de votre Syno est mal détecté",
+        "A cocher si vous avez un 2ème volume disque": "A cocher si vous avez un 2ème volume disque",
+        "A cocher si vous avez un disque USB": "A cocher si vous avez un disque USB",
+        "A cocher pour spécifier la commande de récupération de la température": "A cocher pour spécifier la commande de récupération de la température"
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribution",
