--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -39,8 +39,8 @@
         "Ajouter un Monitoring": "Ajouter un Monitoring",
         "Mes Monitorings": "Mes Monitorings",
         "Local ou Distant ?": "Local ou Distant ?",
-        "Volume 2": "HDD 2",
-        "HDD USB": "Volume USB",
+        "Volume 2": "Volume 2",
+        "HDD USB": "HDD USB",
         "Ajouter Monitoring": "Ajouter Monitoring",
         "Gestion": "Gestion",
         "Ajouter": "Ajouter",
