--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -10,7 +10,7 @@
         "Activer": "Enable",
         "Visible": "Visible",
         "Carte Réseau": "Network card",
-        "1er port Ethernet": "1st ethernet port",
+        "1er port Ethernet": "1st Ethernet port",
         "1er port Wi-Fi": "1st WiFi port",
         "Autre": "Other",
         "Auto (par défaut)": "Auto (default)",
@@ -57,7 +57,7 @@
         "A cocher si le nom du modèle de votre Syno est mal détecté": "Check if Syno model name is poorly detected",
         "A cocher si vous avez un 2ème volume disque": "Check if you have a 2nd disk volume",
         "A cocher si vous avez un disque USB": "Check if you have a USB disk",
-        "A cocher pour spécifier la commande de récupération de la température": "Check to specify custom command to retrieve temp"
+        "A cocher pour spécifier la commande de récupération de température": "Check to specify custom command to retrieve temp"
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribution",
