--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -3,6 +3,7 @@
         "Ajouter un équipement": "Add device",
         "Rechercher": "Search",
         "Général": "General",
+        "Nom de l'équipement": "Device name",
         "Nom de l'équipement Monitoring": "Monitoring device name",
         "Objet parent": "Parent object",
         "Aucun": "None",
