--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -3,6 +3,7 @@
         "Ajouter un équipement": "Agregar equipo",
         "Rechercher": "Buscar",
         "Général": "General",
+        "Nom de l'équipement": "Nombre del equipo",
         "Nom de l'équipement Monitoring": "Nombre del equipo Monitoring",
         "Objet parent": "Objeto padre",
         "Aucun": "Ninguno",
