Add state in command view
+ Update translations

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -34,7 +34,8 @@
         "Nom": "Name",
         "Colorisation des valeurs": "Farbgebung von Werten",
         "Afficher\/Historiser": "Anzeigen\\/Archivieren",
-        "Action": "Aktion",
+        "Actions": "Aktionen",
+        "Etat": "Zustand",
         "Supprimer": "Löschen",
         "Sauvegarder": "Speichern",
         "Ajouter un Monitoring": "Monitoring hinzufügen",
