--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -34,7 +34,8 @@
         "Nom": "Name",
         "Colorisation des valeurs": "Colorization of values",
         "Afficher\/Historiser": "Showing\\/Logging",
-        "Action": "Action",
+        "Actions": "Actions",
+        "Etat": "State",
         "Supprimer": "Delete",
         "Sauvegarder": "Save",
         "Ajouter un Monitoring": "Add a Monitoring",
