--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -34,7 +34,8 @@
         "Nom": "Nombre",
         "Colorisation des valeurs": "Coloración de los valores",
         "Afficher\/Historiser": "Mostrar\\/Historizar",
-        "Action": "Acción",
+        "Actions": "Acciones",
+        "Etat": "Estado",
         "Supprimer": "Borrar",
         "Sauvegarder": "Guardar",
         "Ajouter un Monitoring": "Agregar un Monitoring",
