--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -34,7 +34,8 @@
         "Nom": "Nom",
         "Colorisation des valeurs": "Colorisation des valeurs",
         "Afficher\/Historiser": "Afficher\/Historiser",
-        "Action": "Action",
+        "Actions": "Actions",
+        "Etat": "Etat",
         "Supprimer": "Supprimer",
         "Sauvegarder": "Sauvegarder",
         "Ajouter un Monitoring": "Ajouter un Monitoring",
