Update code and translation
Feature : SSH Key

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -19,11 +19,14 @@
         "Saisir le nom de la carte": "Geben Sie den Namen der Karte ein",
         "Equipement local ou distant ?": "Lokale oder Remote Geräte?",
         "Local": "Lokal",
-        "Distant": "Remote",
+        "Distant (Mot de Passe)": "Remote (Passwort)",
+        "Distant (Clé SSH)": "Remote (SSH Schlüssel)",
         "Adresse IP": "IP Adresse",
         "Saisir l'adresse IP": "Geben Sie die IP-Adresse ein",
         "Port SSH": "SSH Port",
         "Saisir le port SSH": "Geben Sie den SSH Port ein",
+        "Clé SSH": "SSH Schlüssel",
+        "Saisir la clé SSH": "Geben Sie den SSH Schlüssel ein",
         "Identifiant": "Benutzer-ID",
         "Saisir le login": "Geben Sie die Anmeldedaten ein",
         "Mot de passe": "Passwort",
