--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -19,7 +19,8 @@
         "Saisir le nom de la carte": "Enter card name",
         "Equipement local ou distant ?": "Local or remote equipment?",
         "Local": "Local",
-        "Distant": "Remote",
+        "Distant (Mot de Passe)": "Remote (Password)",
+        "Distant (Clé SSH)": "Remote (SSH Key)",
         "Adresse IP": "IP Address",
         "Saisir l'adresse IP": "Enter the IP address",
         "Port SSH": "SSH Port",
@@ -28,6 +29,8 @@
         "Saisir le login": "Enter login",
         "Mot de passe": "Password",
         "Saisir le password": "Enter password",
+        "Clé SSH": "SSH key",
+        "Saisir la clé SSH": "Enter SSH key",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
