--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -19,7 +19,8 @@
         "Saisir le nom de la carte": "Introduzca el nombre de la tarjeta",
         "Equipement local ou distant ?": "¿Dispositivo local o remoto?",
         "Local": "Local",
-        "Distant": "Remoto",
+        "Distant (Mot de Passe)": "Remoto (Contraseña)",
+        "Distant (Clé SSH)": "Remoto (Clave SSH)",
         "Adresse IP": "Dirección IP",
         "Saisir l'adresse IP": "Introduzca la dirección IP",
         "Port SSH": "Puerto SSH",
@@ -28,6 +29,8 @@
         "Saisir le login": "introduzca usuario",
         "Mot de passe": "Contraseña",
         "Saisir le password": "Introduzca la contraseña",
+        "Clé SSH": "Clave SSH",
+        "Saisir la clé SSH": "Introduzca la clave SSH",
         "NAS Synology": "NAS Synology",
         "Informations": "Información",
         "Id": "id",
