--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -36,7 +36,7 @@
         "Id": "ID",
         "Nom": "Name",
         "Colorisation des valeurs": "Farbgebung von Werten",
-        "Afficher\/Historiser": "Anzeigen\\/Archivieren",
+        "Afficher\/Historiser": "Anzeigen\/Archivieren",
         "Actions": "Aktionen",
         "Etat": "Zustand",
         "Supprimer": "Löschen",
