--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -36,7 +36,7 @@
         "Id": "Id",
         "Nom": "Name",
         "Colorisation des valeurs": "Colorization of values",
-        "Afficher\/Historiser": "Showing\\/Logging",
+        "Afficher\/Historiser": "Showing\/Logging",
         "Actions": "Actions",
         "Etat": "State",
         "Supprimer": "Delete",
@@ -57,7 +57,7 @@
         "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1: 2nd Ethernet port, wlan1: 2nd Wi-Fi port ...",
         "Modèle (Alt)": "Modèle (Alt)",
         "Temp (Alt)": "Temp (Alt)",
-        "Commande Temp": "Commande Temp",
+        "Commande Temp": "Temp Command",
         "A cocher pour monitorer un NAS Synology": "Check to monitor a Synology NAS",
         "A cocher si le nom du modèle de votre Syno est mal détecté": "Check if Syno model name is poorly detected",
         "A cocher si vous avez un 2ème volume disque": "Check if you have a 2nd disk volume",
