--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -36,7 +36,7 @@
         "Id": "id",
         "Nom": "Nombre",
         "Colorisation des valeurs": "Coloración de los valores",
-        "Afficher\/Historiser": "Mostrar\\/Historizar",
+        "Afficher\/Historiser": "Mostrar\/Historizar",
         "Actions": "Acciones",
         "Etat": "Estado",
         "Supprimer": "Borrar",
@@ -57,7 +57,7 @@
         "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1 : 2º puerto Ethernet, wlan1 : 2º puerto Wi-Fi....",
         "Modèle (Alt)": "Modelo (Alt)",
         "Temp (Alt)": "Temp (Alt)",
-        "Commande Temp": "Control de temperatura",
+        "Commande Temp": "Comando de temperatura",
         "A cocher pour monitorer un NAS Synology": "Marque para monitorear un Synology NAS",
         "A cocher si vous avez un 2ème volume disque": "Comprueba si tienes un segundo volumen de disco",
         "A cocher si le nom du modèle de votre Syno est mal détecté": "Compruebe si el nombre del modelo de su Syno se detecta incorrectamente",
