--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -54,7 +54,7 @@
         "Equipement": "Dispositivo",
         "Commandes": "Controles",
         "Type": "Tipo",
-        "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1 : 2º puerto Ethernet, wlan1 : 2º puerto Wi-Fi....",
+        "eth1 : 2ème port Ethernet, wlan1 : 2ème port Wi-Fi...": "eth1 : 2º puerto Ethernet, wlan1 : 2º puerto Wi-Fi....",
         "Modèle (Alt)": "Modelo (Alt)",
         "Temp (Alt)": "Temp (Alt)",
         "Commande Temp": "Comando de temperatura",
