--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -54,7 +54,7 @@
         "Equipement": "Equipement",
         "Commandes": "Commandes",
         "Type": "Type",
-        "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...",
+        "eth1 : 2ème port Ethernet, wlan1 : 2ème port Wi-Fi...": "eth1 : 2ème port Ethernet, wlan1 : 2ème port Wi-Fi...",
         "Modèle (Alt)": "Modèle (Alt)",
         "Temp (Alt)": "Temp (Alt)",
         "Commande Temp": "Commande Temp",
