--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -11,8 +11,8 @@
         "Activer": "Aktivieren",
         "Visible": "Sichtbar",
         "Carte Réseau": "Netzwerk-Karte",
-        "1er port Ethernet": "1. Ethernet Port",
-        "1er port Wi-Fi": "1. Wi-Fi Port",
+        "1er port Ethernet": "Erster Ethernet Port",
+        "1er port Wi-Fi": "Erster Wi-Fi Port",
         "Autre": "Andere",
         "Auto (par défaut)": "Auto (standardmäßig)",
         "Nom de la carte réseau": "Netzwerk-Karten Name",
@@ -54,7 +54,7 @@
         "Equipement": "Gerät",
         "Commandes": "Aufträge",
         "Type": "Art",
-        "eth1 : 2éme port Ethernet, wlan1 : 2éme port Wi-Fi...": "eth1: zweiter Ethernet-Port, wlan1: zweiter WLAN-Port...",
+        "eth1 : 2ème port Ethernet, wlan1 : 2ème port Wi-Fi...": "eth1: zweiter Ethernet-Port, wlan1: zweiter WLAN-Port...",
         "Modèle (Alt)": "Modell (Alt)",
         "Temp (Alt)": "Temp (Alt)",
         "Commande Temp": "Temperaturbefehl",
