--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -11,8 +11,8 @@
         "Activer": "Activar",
         "Visible": "Visible",
         "Carte Réseau": "Tarjeta de red",
-        "1er port Ethernet": "1er puerto de red",
-        "1er port Wi-Fi": "1er puerto WI-FI",
+        "1er port Ethernet": "Primer puerto de red",
+        "1er port Wi-Fi": "Primer puerto WI-FI",
         "Autre": "Otros",
         "Auto (par défaut)": "Auto (por defecto)",
         "Nom de la carte réseau": "Nombre del adaptador de red",
