Update SSH Passphrase translations

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -27,6 +27,9 @@
         "Saisir le port SSH": "Geben Sie den SSH Port ein",
         "Clé SSH": "SSH Schlüssel",
         "Saisir la clé SSH": "Geben Sie den SSH Schlüssel ein",
+        "Passphrase": "Passphrase",
+        "Saisir la passphrase SSH": "Geben Sie die SSH Passphrase ein",
+        "(* Optionnel)": "(* Optional)",
         "Identifiant": "Benutzer-ID",
         "Saisir le login": "Geben Sie die Anmeldedaten ein",
         "Mot de passe": "Passwort",
