--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -31,6 +31,9 @@
         "Saisir le password": "Enter password",
         "Clé SSH": "SSH key",
         "Saisir la clé SSH": "Enter SSH key",
+        "Passphrase": "Passphrase",
+        "Saisir la passphrase SSH": "Enter SSH passphrase",
+        "(* Optionnel)": "(* Optional)",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
