--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -31,6 +31,9 @@
         "Saisir le password": "Introduzca la contraseña",
         "Clé SSH": "Clave SSH",
         "Saisir la clé SSH": "Introduzca la clave SSH",
+        "Passphrase": "Frase de contraseña",
+        "Saisir la passphrase SSH": "Introduzca la contraseña SSH",
+        "(* Optionnel)": "(* Opcional)",
         "NAS Synology": "NAS Synology",
         "Informations": "Información",
         "Id": "id",
