--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -31,6 +31,9 @@
         "Saisir le password": "Saisir le password",
         "Clé SSH": "Clé SSH",
         "Saisir la clé SSH": "Saisir la clé SSH",
+        "Passphrase": "Passphrase",
+        "Saisir la passphrase SSH": "Saisir la passphrase SSH",
+        "(* Optionnel)": "(* Optionnel)",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
