--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -29,7 +29,7 @@
         "Saisir la clé SSH": "Geben Sie den SSH Schlüssel ein",
         "Passphrase": "Passphrase",
         "Saisir la passphrase SSH": "Geben Sie die SSH Passphrase ein",
-        "(* Optionnel)": "(* Optional)",
+        "* Optionnel": "* Optional",
         "Identifiant": "Benutzer-ID",
         "Saisir le login": "Geben Sie die Anmeldedaten ein",
         "Mot de passe": "Passwort",
@@ -39,7 +39,7 @@
         "Id": "ID",
         "Nom": "Name",
         "Colorisation des valeurs": "Farbgebung von Werten",
-        "Afficher\/Historiser": "Anzeigen\/Archivieren",
+        "Options": "Optionen",
         "Actions": "Aktionen",
         "Etat": "Zustand",
         "Supprimer": "Löschen",
