--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -33,13 +33,13 @@
         "Saisir la clé SSH": "Introduzca la clave SSH",
         "Passphrase": "Frase de contraseña",
         "Saisir la passphrase SSH": "Introduzca la contraseña SSH",
-        "(* Optionnel)": "(* Opcional)",
+        "* Optionnel": "* Opcional",
         "NAS Synology": "NAS Synology",
         "Informations": "Información",
         "Id": "id",
         "Nom": "Nombre",
         "Colorisation des valeurs": "Coloración de los valores",
-        "Afficher\/Historiser": "Mostrar\/Historizar",
+        "Options": "Opciones",
         "Actions": "Acciones",
         "Etat": "Estado",
         "Supprimer": "Borrar",
