--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -33,13 +33,13 @@
         "Saisir la clé SSH": "Enter SSH key",
         "Passphrase": "Passphrase",
         "Saisir la passphrase SSH": "Enter SSH passphrase",
-        "(* Optionnel)": "(* Optional)",
+        "* Optionnel": "* Optional",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
         "Nom": "Name",
         "Colorisation des valeurs": "Colorization of values",
-        "Afficher\/Historiser": "Showing\/Logging",
+        "Options": "Options",
         "Actions": "Actions",
         "Etat": "State",
         "Supprimer": "Delete",
