--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -33,13 +33,13 @@
         "Saisir la clé SSH": "Saisir la clé SSH",
         "Passphrase": "Passphrase",
         "Saisir la passphrase SSH": "Saisir la passphrase SSH",
-        "(* Optionnel)": "(* Optionnel)",
+        "* Optionnel": "* Optionnel",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
         "Nom": "Nom",
         "Colorisation des valeurs": "Colorisation des valeurs",
-        "Afficher\/Historiser": "Afficher\/Historiser",
+        "Options": "Options",
         "Actions": "Actions",
         "Etat": "Etat",
         "Supprimer": "Supprimer",
