--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -29,7 +29,7 @@
         "Saisir la clé SSH": "Geben Sie den SSH Schlüssel ein",
         "Passphrase": "Passphrase",
         "Saisir la passphrase SSH": "Geben Sie die SSH Passphrase ein",
-        "Optionnel : Phrase secrête pour la clé SSH": "Optional : Passphrase für den SSH Schlüssel",
+        "Optionnel : Phrase secrète pour la clé SSH": "Optional : Passphrase für den SSH Schlüssel",
         "Identifiant": "Benutzer-ID",
         "Saisir le login": "Geben Sie die Anmeldedaten ein",
         "Mot de passe": "Passwort",
