--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -34,7 +34,7 @@
         "Passphrase": "Frase de contraseña",
         "Saisir la passphrase SSH": "Introduzca la contraseña SSH",
         "* Optionnel": "* Opcional",
-        "Optionnel : Phrase secrête pour la clé SSH": "Opcional : frase de contraseña para la clave SSH",
+        "Optionnel : Phrase secrète pour la clé SSH": "Opcional : frase de contraseña para la clave SSH",
         "NAS Synology": "NAS Synology",
         "Informations": "Información",
         "Id": "id",
