--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -33,7 +33,7 @@
         "Saisir la clé SSH": "Saisir la clé SSH",
         "Passphrase": "Passphrase",
         "Saisir la passphrase SSH": "Saisir la passphrase SSH",
-        "Optionnel : Phrase secrête pour la clé SSH": "Optionnel : Phrase secrête pour la clé SSH",
+        "Optionnel : Phrase secrète pour la clé SSH": "Optionnel : Phrase secrète pour la clé SSH",
         "NAS Synology": "NAS Synology",
         "Informations": "Informations",
         "Id": "Id",
