Update texts and translations

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -69,28 +69,31 @@
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribution",
-        "Démarré depuis": "Started since",
-        "Charge système 1min": "System load 1min",
-        "Charge système 5min": "System load 5min",
-        "Charge système 15min": "System load 15min",
-        "Mémoire (Méga)": "Memory (Méga)",
-        "Mémoire libre (pourcentage)": "Free memory (percentage)",
+        "Démarré Depuis": "Started Since",
+        "Charge Système 1 min": "System Load 1 min",
+        "Charge Système 5 min": "System Load 5 min",
+        "Charge Système 15 min": "System Load 15 min",
+        "Mémoire": "Memory",
+        "Mémoire Libre (Pourcentage)": "Free Memory (Percentage)",
         "Swap": "Swap",
-        "Réseau (M)": "Network (M)",
+        "Swap Libre (Pourcentage)": "Free swap (percentage)",
+        "Réseau (RX-TX)": "Network (RX-TX)",
         "Espace disque Total": "Total disk space",
         "Espace disque Utilisé": "Disk space used",
-        "Espace disque Utilisé (pourcentage)": "Disk space used (percentage)",
+        "Espace Disque Utilisé (Pourcentage)": "Disk space used (percentage)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "Temperature CPU",
-        "Statut cnx SSH Scénario": "State cnx SSH Scenario",
-        "perso2": "user2",
-        "perso1": "user1",
-        "Syno Volume 2 Espace disque Total": "Syno Volume 2 total space drive",
-        "Syno Volume 2 Espace disque Utilisé": "Syno Volume 2 total space used",
-        "Syno Volume 2 Espace disque Utilisé (pourcentage)": "Syno Volume 2 total space used (percentage)",
-        "reboot": "reboot",
-        "poweroff": "poweroff",
-        "Swap libre (pourcentage)": "Free swap (percentage)"
+        "Statut Cnx SSH": "Status Cnx SSH",
+        "perso1": "custom1",
+        "perso2": "custom2",
+        "Syno Volume 2 Total": "Syno Volume 2 Total",
+        "Syno Volume 2 Utilisé": "Syno Volume 2 Used",
+        "Syno Volume 2 Utilisé (Pourcentage)": "Syno Volume 2 Used (Percentage)",
+        "Syno Volume USB Total": "Syno Volume USB Total",
+        "Syno Volume USB Utilisé": "Syno Volume USB Used",
+        "Syno Volume USB Utilisé (Pourcentage)": "Syno Volume USB Used (Percentage)",
+        "Reboot": "Reboot",
+        "PowerOff": "PowerOff"
     },
     "plugins\/Monitoring\/desktop\/js\/Monitoring.js": {
         "Afficher": "Show",
