--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -69,28 +69,31 @@
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribución",
-        "Démarré depuis": "Iniciado desde",
-        "Charge système 1min": "Carga del sistema  1 min",
-        "Charge système 5min": "Carga del sistema 5 min",
-        "Charge système 15min": "Carga del sistema 15 min",
-        "Mémoire (Méga)": "Memoria (Mb)",
-        "Mémoire libre (pourcentage)": "Memoria libre (%)",
+        "Démarré Depuis": "Iniciado Desde",
+        "Charge Système 1 min": "Carga del Sistema  1 min",
+        "Charge Système 5 min": "Carga del Sistema 5 min",
+        "Charge Système 15 min": "Carga del Sistema 15 min",
+        "Mémoire": "Memoria",
+        "Mémoire Libre (Pourcentage)": "Memoria Libre (Porcentaje)",
         "Swap": "Swap",
-        "Réseau (M)": "Red (M)",
-        "Espace disque Total": "Espacio total disco",
-        "Espace disque Utilisé": "Espacio Utilizado disco",
-        "Espace disque Utilisé (pourcentage)": "Espacio utilizado disco (%)",
+        "Swap Libre (Pourcentage)": "Swap Libre (Porcentaje)",
+        "Réseau (TX-RX)": "Red (TX-RX)",
+        "Espace Disque Total": "Espacio Total Disco",
+        "Espace Disque Utilisé": "Espacio Utilizado Disco",
+        "Espace Disque Utilisé (Pourcentage)": "Espacio Utilizado Disco (Porcentaje)",
         "CPU(s)": "CPU(s)",
         "Température CPU": "Temperatura CPU",
-        "Statut cnx SSH Scénario": "Estado conexión SSH escenario",
-        "perso2": "perso2",
-        "perso1": "perso1",
-        "Syno Volume 2 Espace disque Total": "Syno Volume 2 Espace total disco",
-        "Syno Volume 2 Espace disque Utilisé": "Syno Volume 2 Espacio utilizado disco",
-        "Syno Volume 2 Espace disque Utilisé (pourcentage)": "Syno Volume 2 Espacio disco utilizado (%)",
-        "reboot": "reiniciar",
-        "poweroff": "apagar",
-        "Swap libre (pourcentage)": "Swap libre (porcentaje)"
+        "Statut Cnx SSH": "Estado Conexión SSH",
+        "perso1": "personal1",
+        "perso2": "personal2",
+        "Syno Volume 2 Total": "Syno Volume 2 Total",
+        "Syno Volume 2 Utilisé": "Syno Volume 2 Utilizado",
+        "Syno Volume 2 Utilisé (Pourcentage)": "Syno Volume 2 Utilizado (Porcentaje)",
+        "Syno Volume USB Total": "Syno Volume USB Total",
+        "Syno Volume USB Utilisé": "Syno Volume USB Utilizado",
+        "Syno Volume USB Utilisé (Pourcentage)": "Syno Volume USB Utilizado (Porcentaje)",
+        "Reboot": "Reiniciar",
+        "PowerOff": "Apagar"
     },
     "plugins\/Monitoring\/desktop\/js\/Monitoring.js": {
         "Afficher": "Mostrar",
