--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -69,7 +69,7 @@
     },
     "plugins\/Monitoring\/core\/class\/Monitoring.class.php": {
         "Distribution": "Distribution",
-        "Démarré Depuis": "Démarré depuis",
+        "Démarré Depuis": "Démarré Depuis",
         "Charge Système 1 min": "Charge Système 1 min",
         "Charge Système 5 min": "Charge Système 5 min",
         "Charge Système 15 min": "Charge Système 15 min",
